[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
description = "Simple histograms with configurable buckets"
documentation = "https://docs.rs/histo"
edition = "2021"
keywords = ["histogram", "stddev", "mean"]
license = "Apache-2.0/MIT"
name = "histo"
readme = "README.md"
repository = "https://github.com/fitzgen/histo"
version = "1.0.0"

[badges]
travis-ci = { repository = "fitzgen/histo" }

[[bin]]
name = "histo"
doc = false

[dependencies]
streaming-stats = "0.2"

[dependencies.quickcheck]
optional = true
version = "1"
